single-node/manifests/digit-svd-simple-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: digit-svd-simple-deployment
  namespace: digit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digit-svd
      component: simple
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: digit-svd
        component: simple
    spec:
      serviceAccountName: digit-svd-sa  # Назначаем новый ServiceAccount
      imagePullSecrets:
        - name: digit-dgepu-secret
      containers:
      - name: simple
        # namespace: digit
        image: 85.141.97.224:443/svd_simple:4.10.0.4.3
        # imagePullPolicy: Always
        ports:
        - containerPort: 10101
        volumeMounts:
          - name: digit-svd-simple-data-rsc
            mountPath: /svd/host
      volumes:
      - name: digit-svd-simple-data-rsc
        persistentVolumeClaim:
          claimName: digit-svd-simple-data-pvc
