single-node/manifests/digit-postgres-deploy.yaml

apiVersion: v1
kind: Service
metadata:
  name: digit-postgres-headless
  namespace: digit
spec:
  selector:
    app: digit-postgres
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: digit-postgres-deployment
  namespace: digit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digit-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: digit-postgres
    spec:
      imagePullSecrets:
        - name: digit-dgepu-secret
      containers:
      - name: digit-postgres
        image: postgis/postgis:12-3.4
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: digit-postgres-data-rsc
          mountPath: /var/lib/postgresql/data
        - name: init-db
          mountPath: /docker-entrypoint-initdb.d
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - postgres
            - -h
            - localhost
            - -p
            - "5432"
          initialDelaySeconds: 30  # Даем PostgreSQL время на запуск
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - 'psql -U postgres -d postgres -c "SELECT 1;"'
          initialDelaySeconds: 5
          periodSeconds: 10
      # nodeSelector:
      #   kubernetes.io/hostname: srv24
      volumes:
      - name: digit-postgres-data-rsc
        persistentVolumeClaim:
          claimName: digit-postgres-pvc-10
      - name: init-db
        emptyDir: {}
      - name: config-volume
        configMap:
          name: init-db-config
