single-node/manifests/digit-svd-control-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: digit-svd-control-service
  namespace: digit
spec:
  selector:
    app: digit-svd-control
  ports:
    - protocol: UDP
      port: 11000
      targetPort: 11000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digit-svd-control-deployment
  namespace: digit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digit-svd-control
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: digit-svd-control
    spec:
      imagePullSecrets:
        - name: digit-dgepu-secret
      containers:
        - name: digit-svd-control
          image: 85.141.97.224:443/svd_control:4.10
          # imagePullPolicy: Always
          ports:
            - containerPort: 11000
              protocol: UDP
          volumeMounts:
            - name: digit-svd-control-data-rsc
              mountPath: /svd/host
            - name: config-volume
              mountPath: /svd/host/config.json # Монтируем `config.json` непосредственно в `/svd/host`
              subPath: config.json # Монтируем только файл `config.json`
          # livenessProbe:
          #   exec:
          #     command:
          #     - /bin/sh
          #     - -c
          #     - "exit 0"  # Всегда возвращает успешный статус (код 0)
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
          # readinessProbe:
          #   exec:
          #     command:
          #     - /bin/sh
          #     - -c
          #     - "exit 0"  # Всегда возвращает успешный статус (код 0)
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
      volumes:
        - name: digit-svd-control-data-rsc
          persistentVolumeClaim:
            claimName: digit-svd-control-data-pvc
        - name: config-volume
          configMap:
            name: digit-svd-control-config
